Fix link alignment

--- a/src/components/datagrid/_datagrid.scss
+++ b/src/components/datagrid/_datagrid.scss
@@ -1006,6 +1006,7 @@ $datagrid-short-row-height: 25px;
 
         .hyperlink {
           line-height: 1.4rem;
+          vertical-align: middle;
         }
 
         .row-btn {
